<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab_inventory"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_startInventory"
            style="?android:attr/absListViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/start"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_stopInventory"
            style="?android:attr/absListViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/stop"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_paraInventory"
            style="?android:attr/absListViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/Parameter"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_clearInventoryList"
            style="?android:attr/absListViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/clearList"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            >
            <RadioButton
                android:id="@+id/rdbtnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="保留数据"
                android:checked="true"></RadioButton>
            <RadioButton
                android:id="@+id/rdbtnUnsave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="不保留数据"></RadioButton>
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/list_inventory"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_inventoryInfo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Tag count:0  Loop:0"
            android:textColor="#0000FF"
            android:textSize="15sp" />

        <include
            android:id="@+id/inventorylist_title"
            layout="@xml/inventorylist_tittle" />

        <ListView
            android:id="@+id/list_inventory_record"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/list_bg"
            android:cacheColorHint="@android:color/transparent"
            android:divider="#f9b68b"
            android:dividerHeight="1.0dp"
            android:fadingEdge="none"
            android:scrollbars="vertical" >
        </ListView>
    </LinearLayout>

</LinearLayout>